--- a/conexion_agraria/index.html
+++ b/conexion_agraria/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet">
   <link href="./assets/css/style.css" rel="stylesheet">
-  <title>CONEXION AGRARIA</title>
+  <title>Novo titulo</title>
 </head>
 
 <body>
